[package]
name = "assign2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bit-vec = { version = "0.6", features = ["serde"]}
serde = { version = "1.0.152", features = ["derive"] }
get-size = "0.1.3"
rand = "0.8.5"
